# kuvpn-actions

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  flake.nix  install.ps1  install.sh  todo.md
.github/workflows/: deploy-docs.yml  devskim.yml  linux-aarch64.yml  linux-x64.yml  mac-aarch64.yml  mac-x64.yml  release.yml  windows-x64.yml
crates/kuvpn/: Cargo.toml
crates/kuvpn-cli/: Cargo.toml
crates/kuvpn-cli/src/: args.rs  credentials.rs  main.rs
crates/kuvpn-gui/: Cargo.toml  build.rs
crates/kuvpn-gui/assets/: kuvpn.icns
crates/kuvpn-gui/src/: app.rs  config.rs  logger.rs  main.rs  notifications.rs  platform.rs  provider.rs  styles.rs  theme.rs  tray.rs  types.rs
crates/kuvpn-gui/src/view/: actions.rs  console.rs  header.rs  history.rs  mfa.rs  mod.rs  modal.rs  settings.rs  status.rs
crates/kuvpn-win-helper/: Cargo.toml
crates/kuvpn-win-helper/src/: main.rs
crates/kuvpn/src/: browser.rs  diagnostics.rs  dsid.rs  dsid_cache.rs  error.rs  file_logger.rs  helper.rs  history.rs  lib.rs  logger.rs  openconnect.rs  session.rs  utils.rs  win_elevated.rs
crates/kuvpn/src/handlers/: auth_handlers.rs  generic_detection.rs  mfa_handlers.rs  mod.rs  page_detection.rs
crates/kuvpn/src/openconnect/: mod.rs  unix.rs  windows.rs
docs/: cli.md  gui.md  index.html
kuvpn-linux/: Cargo.toml
kuvpn-linux/src/: args.rs  main.rs
kuvpn-mac/: Cargo.toml
kuvpn-mac/src/: main.rs
packaging/appimage/: Dockerfile  Dockerfile.aarch64
packaging/appimage/AppDir/: .DirIcon  kuvpn.desktop
packaging/appimage/AppDir/usr/share/applications/: kuvpn.desktop
packaging/linux/: kuvpn.desktop
packaging/macos/: Dockerfile  cross_build.sh
packaging/windows/: Dockerfile  README.md  kuvpn.iss
scripts/: AppRun.sh  build_appimage.sh  build_appimage_aarch64.sh  build_macos.sh  build_windows.sh  bump_version.sh  check_all.sh  check_macos.sh  check_windows.sh  install_linux.sh
src/: args.rs  dsid.rs  lib.rs  main.rs
src/handlers/: auth_handlers.rs  mfa_handlers.rs  mod.rs  page_detection.rs
