[package]
name = "kuvpn"
version = "2.0.1"
edition = "2021"
description = "A convenient tool for connecting to Koç University's VPN using OpenConnect."
repository = "https://github.com/KUACC-VALAR-HPC-KOC-UNIVERSITY/kuvpn"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.52", features = ["derive"] }
colored = "3.0.0"
env_logger = "0.11.8"
headless_chrome = { version = "1.0.18", features = ["fetch", "rustls"] }
log = "0.4.28"
rpassword = "7.4.0"
which = "8.0.0"

[profile.release]
opt-level = "z"           # Minimize size (use "z" or "s" for small codegen)
lto = true                # Enable link-time optimization
panic = "abort"           # Abort on panic (smaller than "unwind")
strip = true              # Strip debug symbols from build (requires Rust 1.70+)
codegen-units = 1         # Single codegen unit for better LTO of small binaries
