[workspace]
members = [
    "crates/kuvpn",
    "crates/kuvpn-cli",
    "crates/kuvpn-gui",
    "crates/kuvpn-win-helper",
]
resolver = "2"

[workspace.package]
version = "3.0.0"

[profile.release]
opt-level = "z"           # Minimize size (use "z" or "s" for small codegen)
lto = true                # Enable link-time optimization
panic = "abort"           # Abort on panic (smaller than "unwind")
strip = true              # Strip debug symbols from build (requires Rust 1.70+)
codegen-units = 1         # Single codegen unit for better LTO of small binaries