[package]
name = "kuvpn-cli"
version = "2.0.3"
edition = "2021"
description = "CLI for connecting to Koç University's VPN"
repository = "https://github.com/KUACC-VALAR-HPC-KOC-UNIVERSITY/kuvpn"
license = "MIT"

[dependencies]
kuvpn = { path = "../kuvpn" }
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
log = "0.4.29"
crossbeam-channel = "0.5"
