[package]
name = "kuvpn-cli"
version.workspace = true
edition = "2021"
description = "CLI for connecting to Koç University's VPN"
repository = "https://github.com/KUACC-VALAR-HPC-KOC-UNIVERSITY/kuvpn"
license = "MIT"

[dependencies]
kuvpn = { path = "../kuvpn" }
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
log = "0.4.29"
crossbeam-channel = "0.5"
console = "0.16"
dialoguer = "0.12"
indicatif = "0.18.4"
ctrlc = "3.4"
