[package]
name = "kuvpn-gui"
version = "2.0.2"
edition = "2021"

[dependencies]
kuvpn = { path = "../kuvpn" }
iced = { version = "0.14", features = ["tokio", "svg"] }
anyhow = "1.0.101"
tokio = { version = "1.43", features = ["full"] }
log = "0.4.29"
futures = "0.3"
tray-icon = "0.19"
image = "0.25"
gtk = "0.18.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
