[package]
name = "kuvpn-gui"
version = "1.0.0"
edition = "2021"

[dependencies]
kuvpn = { path = "../kuvpn" }
iced = { version = "0.14", features = ["tokio", "svg"] }
anyhow = "1.0.101"
tokio = { version = "1.43", features = ["full"] }
log = "0.4.29"
futures = "0.3"
tray-icon = "0.21.3"
image = "0.25"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.1"

[build-dependencies]
winres = "0.1"
