[package]
name = "kuvpn"
version = "2.0.2"
edition = "2021"
description = "Core library for connecting to Koç University's VPN"
repository = "https://github.com/KUACC-VALAR-HPC-KOC-UNIVERSITY/kuvpn"
license = "MIT"

[dependencies]
anyhow = "1.0.101"
colored = "3.1.1"
env_logger = "0.11.8"
headless_chrome = { version = "1.0.21", features = ["fetch", "rustls"] }
log = "0.4.29"
rpassword = "7.4.0"
which = "8.0.0"
nix = { version = "0.29", features = ["signal", "process"] }
