[package]
name = "kuvpn"
version.workspace = true
edition = "2021"
description = "Core library for connecting to Koç University's VPN"
repository = "https://github.com/ealtun21/kuvpn-actions"
license = "MIT"

[dependencies]
anyhow = "1.0.101"
colored = "3.1.1"
env_logger = "0.11.8"
headless_chrome = { version = "1.0.21", features = ["fetch", "rustls"] }
log = "0.4.29"
console = "0.16.2"
dialoguer = "0.12"
which = "8.0.0"
crossbeam-channel = "0.5.11"
once_cell = "1.21.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.1", features = ["signal", "process"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
runas = "1.2.0"
sysinfo = "0.33.1"
windows = { version = "0.58.0", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO"] }
